# discovery

./: .gitignore  Cargo.toml  openocd-vscode.gdb  openocd.gdb
.cargo/: config.toml
f3discovery/src/11-usart/: openocd-vscode.gdb
f3discovery/src/11-usart/src/: main.rs
f3discovery/src/15-led-compass/: Cargo.toml  openocd.gdb
f3discovery/src/15-led-compass/.cargo/: config
f3discovery/src/15-led-compass/auxiliary/: Cargo.toml
f3discovery/src/15-led-compass/src/: compass_direction.rs  leds.rs  main.rs
src/: compass_direction.rs  leds.rs  main.rs  openocd.gdb  serial.rs
src/.cargo/: config.toml
src/05-led-roulette/src/: main.rs
src/07-registers/src/: main.rs
src/08-leds-again/src/: main.rs
src/09-clocks-and-timers/: openocd.gdb
src/09-clocks-and-timers/src/: main.rs
src/11-usart/: .gitignore  openocd.gdb
src/11-usart/examples/: the-answer.rs
src/11-usart/src/: lib.rs  main.rs
src/14-i2c/: Cargo.toml  openocd.gdb
src/14-i2c-magnetrometer/: Cargo.toml
src/14-i2c-magnetrometer/src/: main.rs
src/14-i2c/auxiliary/: Cargo.toml
src/14-i2c/auxiliary/src/: lib.rs
src/14-i2c/src/: main.rs
src/15-led-compass/: .gitignore  Cargo.toml  openocd-vscode.gdb
src/16-punch-o-meter-acceleration/: Cargo.toml
src/16-punch-o-meter-acceleration/src/: main.rs
