[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "usart"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
panic-itm = "0.4.2"
stm32f3-discovery = "0.7.0"

# [dependencies.aux11]
# path = "auxiliary"
# enable this if you are going to use an external serial adapter
# features = ["adapter"]

# [dependencies.heapless]
# default-features = false
# version = "0.7.1"

# [profile.release]
# codegen-units = 1
# debug = true
# lto = true
